@@ -73,13 +73,13 @@
 
     <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
     <elasticsearch.version>2.4.4</elasticsearch.version>
-    <kubernetes-client.version>1.3.99</kubernetes-client.version>
+    <kubernetes-client.version>3.1.0</kubernetes-client.version>
     <searchguard.version>2.4.4.10</searchguard.version>
     <searchguard-ssl.version>2.4.4.19</searchguard-ssl.version>
     <!-- used by vendor builds to use vendor version of searchguard plugins -->
     <version.suffix />
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.elasticsearch</groupId>
@@ -103,6 +103,12 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>openshift-server-mock</artifactId>
+      <version>${kubernetes-client.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.floragunn</groupId>
       <artifactId>search-guard-2</artifactId>
       <version>${searchguard.version}${version.suffix}</version>
@@ -120,7 +126,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
+      <version>4.9</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -186,12 +192,15 @@
         <version>2.18.1</version>
         <configuration>
           <excludes>
-            <exclude>**/*IntegrationTest.java</exclude>
+            <exclude>**/HttpsProxyClientCertAuthenticatorIntegrationTest.java</exclude>
           </excludes>
           <environmentVariables>
             <ENV_VAR_EXISTS>value</ENV_VAR_EXISTS>
             <ENV_VAR_EXISTS_BOOLEAN>true</ENV_VAR_EXISTS_BOOLEAN>
+            <PROJECT_DIR>${project.basedir}</PROJECT_DIR>
           </environmentVariables>
+          <argLine>-da -Djava.security.manager
+	                  -Djava.security.policy=${basedir}/src/test/resources/java.policy</argLine>
         </configuration>
       </plugin>
       <plugin>
